# curepay

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
curepay/: __init__.py  __main__.py  agent.py  cli.py
curepay/data/: __init__.py  drift.py  models.py  prices.py  solana.py
curepay/execution/: __init__.py  paper.py  portfolio.py
curepay/risk/: __init__.py  manager.py
curepay/strategy/: __init__.py  funding_carry.py  signals.py
curepay/utils/: __init__.py  cache.py  config.py  helpers.py  logger.py  rate_limiter.py
tests/: conftest.py  test_agent.py  test_cache_and_limiter.py  test_drift_client.py  test_helpers.py  test_live_drift.py  test_risk_and_portfolio.py  test_strategy.py
web/: .gitignore  index.html  package-lock.json  package.json
web/src/: App.jsx  AppPage.jsx  Landing.jsx  index.css
web/src/components/: AgentSection.jsx  ApiSection.jsx  Capabilities.jsx  CoinList.jsx  CoinLogo.jsx  CursorGlow.jsx  DragonCanvas.jsx  FinalCTA.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  Icons.jsx  Identicon.jsx  LiveFeedPanel.jsx  Logo.jsx  Marquee.jsx  Navbar.jsx  Platform.jsx  Playground.jsx  PoweredBy.jsx  ScoreBreakdown.jsx  TokenCA.jsx  Vision.jsx
web/src/data/: appdata.js  links.js  markets.js
web/src/hooks/: useInViewPause.js  useMarketFeed.js
